--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@aws-amplify/ui-react": "^4.3.1",
+    "@chakra-ui/react": "^2.4.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@tanstack/react-table": "^8.7.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "aws-amplify": "^5.0.8",
+    "aws-appsync": "^4.1.9",
+    "aws-appsync-auth-link": "^3.0.7",
+    "chart.js": "^4.1.1",
+    "date-fns": "^2.29.3",
+    "framer-motion": "^8.0.2",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.6.1"
   }
 }
