--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
